Loading messages is replaced with li list of movies

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <h1 id="h1">Hello There!</h1>
-        <p id="p">To get started, edit <code>src/index.js</code>.</p>
+        <!--<p id="p">To get started, edit <code>src/index.js</code>.</p>-->
     </div>
 
     <script src="/main.js"></script>
