Add fetchTest listener on submit button

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,16 @@
     <div class="container">
         <h1 id="h1">Hello There!</h1>
         <div id="form">
-            <form method="POST" action="api/movies">
+            <form method="" action="">
                 <label for="movie">Movie Title</label>
                 <input id="movie" name="title" type="text">
                 <br>
-                <input type="radio" name="rating" value="1" checked> 1
-                <input type="radio" name="rating" value="2"> 2
-                <input type="radio" name="rating" value="3"> 3
-                <input type="radio" name="rating" value="4"> 4
-                <input type="radio" name="rating" value="5"> 5
-                <input type="submit">
+                <input id="1" type="radio" name="rating" value="1" checked> 1
+                <input id="2" type="radio" name="rating" value="2"> 2
+                <input id="3" type="radio" name="rating" value="3"> 3
+                <input id="4" type="radio" name="rating" value="4"> 4
+                <input id="5" type="radio" name="rating" value="5"> 5
+                <button id="submitBtn">Submit</button>
             </form>
         </div>
         <!--<p id="p">To get started, edit <code>src/index.js</code>.</p>-->
