--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,15 @@
                 <label for="movie">Movie Title</label>
                 <input id="movie" name="title" type="text">
                 <br>
-                <input id="1" type="radio" name="rating" value="1" checked> 1
+                <input id="1" type="radio" name="rating" value="1"> 1
                 <input id="2" type="radio" name="rating" value="2"> 2
                 <input id="3" type="radio" name="rating" value="3"> 3
                 <input id="4" type="radio" name="rating" value="4"> 4
                 <input id="5" type="radio" name="rating" value="5"> 5
-            </form>
             <button id="submitBtn">Submit</button>
+            </form>
         </div>
+
         <!--<p id="p">To get started, edit <code>src/index.js</code>.</p>-->
     </div>
 
