--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
                 <input id="5" type="radio" name="rating" value="5"> 5
             <button id="submitBtn">Submit</button>
             </form>
+
+            <button id="edit">edit movie list</button>
         </div>
 
         <!--<p id="p">To get started, edit <code>src/index.js</code>.</p>-->
