--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8" />
     <title>My Application</title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="/style.css" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 </head>
 <body>
 
     <div class="container">
-        <h1 id="h1">Hello There!</h1>
+        <ul id="listss"></ul>
         <div id="form">
             <form method="" action="">
                 <label for="movie">Movie Title</label>
@@ -27,7 +34,10 @@
 
         <!--<p id="p">To get started, edit <code>src/index.js</code>.</p>-->
     </div>
-
     <script src="/main.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+
 </body>
 </html>
