--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,39 @@
         </table>
     </div>
 
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s3">
+                        <i class="material-icons prefix">movie</i>
+                        <input type="text" id="edit-movie-title" class="validate">
+                        <label for="movie-title">Title</label>
+                    </div>
+                    <div class="col s6">
+                        <i class="material-icons prefix">star</i>
+                        <input name="rating" type="radio" id="edit-1" />
+                        <label for="edit-1">1</label>
+                        <input name="rating" type="radio" id="edit-2" />
+                        <label for="edit-2">2</label>
+                        <input name="rating" type="radio" id="edit-3" />
+                        <label for="edit-3">3</label>
+                        <input name="rating" type="radio" id="edit-4" />
+                        <label for="edit-4">4</label>
+                        <input name="rating" type="radio" id="edit-5" />
+                        <label for="edit-5">5</label>
+                    </div>
+                    <div class="col s2">
+                        <a class="waves-effect waves-light btn" id="edit-submitBtn"><i class="material-icons left">create</i>
+                            Add</a>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">edit</a>
+        </div>
+    </div>
 
 
         <!--<ul id="listss"></ul>-->
@@ -79,8 +112,8 @@
 
         <!--<p id="p">To get started, edit <code>src/index.js</code>.</p>-->
 
-    <script src="/main.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
 
