--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
                         <label for="5">5</label>
                     </div>
                     <div class="col s2">
-                        <a class="waves-effect waves-light btn" id="submitBtn"><i class="material-icons left">create</i>
-                            Add</a>
+                        <button class="waves-effect waves-light btn" id="submitBtn"><i class="material-icons left">create</i>
+                            Add</button>
                     </div>
                 </div>
             </form>
@@ -80,10 +80,10 @@
                         <input name="rating" type="radio" id="edit-5" />
                         <label for="edit-5">5</label>
                     </div>
-                    <div class="col s2">
-                        <a class="waves-effect waves-light btn" id="edit-submitBtn"><i class="material-icons left">create</i>
-                            Add</a>
-                    </div>
+                    <!--<div class="col s2">-->
+                        <!--<a class="waves-effect waves-light btn" id="edit-submitBtn"><i class="material-icons left">create</i>-->
+                            <!--Add</a>-->
+                    <!--</div>-->
                 </div>
             </form>
         </div>
