--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
                 <div class="row">
                     <div class="input-field col s3">
                         <i class="material-icons prefix">movie</i>
+                        <input type="hidden" name="id" id="id">
                         <input type="text" id="edit-movie-title" class="validate">
                         <label for="movie-title">Title</label>
                     </div>
