Radio buttons on edit modal are now preselected with current rating

--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,15 @@
                     </div>
                     <div class="col s6">
                         <i class="material-icons prefix">star</i>
-                        <input id="1" name="rating" type="radio" value="1">
+                        <input id="1" name="addRating" type="radio" value="1">
                         <label for="1">1</label>
-                        <input id="2" name="rating" type="radio" value="2">
+                        <input id="2" name="addRating" type="radio" value="2">
                         <label for="2">2</label>
-                        <input id="3" name="rating" type="radio" value="3">
+                        <input id="3" name="addRating" type="radio" value="3">
                         <label for="3">3</label>
-                        <input id="4" name="rating" type="radio" value="4">
+                        <input id="4" name="addRating" type="radio" value="4">
                         <label for="4">4</label>
-                        <input id="5" name="rating" type="radio" value="5">
+                        <input id="5" name="addRating" type="radio" value="5">
                         <label for="5">5</label>
                     </div>
                     <div class="col s2">
@@ -68,17 +68,17 @@
                         <input type="text" id="edit-movie-title" class="validate">
                         <label for="movie-title">Title</label>
                     </div>
-                    <div class="col s6">
+                    <div class="editRating col s6">
                         <i class="material-icons prefix">star</i>
-                        <input name="rating" type="radio" id="edit-1" />
+                        <input name="rating" type="radio" id="edit-1" value="1" />
                         <label for="edit-1">1</label>
-                        <input name="rating" type="radio" id="edit-2" />
+                        <input name="rating" type="radio" id="edit-2" value="2" />
                         <label for="edit-2">2</label>
-                        <input name="rating" type="radio" id="edit-3" />
+                        <input name="rating" type="radio" id="edit-3" value="3" />
                         <label for="edit-3">3</label>
-                        <input name="rating" type="radio" id="edit-4" />
+                        <input name="rating" type="radio" id="edit-4" value="4" />
                         <label for="edit-4">4</label>
-                        <input name="rating" type="radio" id="edit-5" />
+                        <input name="rating" type="radio" id="edit-5" value="5" />
                         <label for="edit-5">5</label>
                     </div>
                 </div>
