Added a table header for ID

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
         <table class="striped">
             <thead>
                 <tr>
+                    <th>ID</th>
                     <th>Title</th>
                     <th>Rating</th>
                     <th>Edit Movie</th>
@@ -85,7 +86,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">edit</a>
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat submitEdit">edit</a>
         </div>
     </div>
 
